<resources>
    // Nombre de la aplicación
    <string name="app_name">Mechaponics</string>

    // Splash screen
    // Descripcion de la imagen de Splash screen
    <string name="sc_description">Esta imagen es del splash screen de la aplicación</string>
    // Hecho por
    <string name="tv_byMechaponics">Hecho por</string>
    // Nombre de la empresa
    <string name="tv_Mechaponics">Mechaponics System</string>

    // Login screen
    // Texto de bienvenida al usuario
    <string name="lg_text_bienvenida">¡Bienvenidos a Mechaponics System!</string>
    // Texto de usuario
    <string name="lg_text_Usuario">Correo Electrónico</string>
    // Texto de contraseña
    <string name="lg_text_Contrasena">Contraseña</string>
    // Texto boton de iniciar sesión
    <string name="lg_btn_IniciarSesion">Inciar Sesión</string>
    // Texto para registro
    <string name="lg_texto_registro">¿No tienes cuenta?, registrate!</string>
    // Texto boton de registrarse
    <string name="lg_btn_registro">Registrarse</string>

    // Sign up screen
    // Texto para registro
    <string name="su_text_informacionR">Ingrese un correo y una contraseña para relizar su registro</string>
    // Texto de usuario
    <string name="su_text_UsuarioR">Correo Electrónico</string>
    // Texto de contraseña
    <string name="su_text_ContrasenaR">Contraseña</string>
    // Texto de confirmación de contraseña
    <string name="su_text_ContrasenaCR">Confirme contraseña</string>
    // Texto boton de registro
    <string name="su_btn_registroU">Registrar</string>

    // Login screen
    // Texto de contraseña olvidada
    <string name="lg_texto_contraOlvidad">¿Olvidaste tu contraseña?</string>

    // Forgot screen
    // Texto para recuperar contraseña
    <string name="fp_texto_recuperarcontra">Ingresa un correo para restablecer tu contraseña</string>
    // Texto boton recuperar contraseña
    <string name="fp_btn_recuperar">Recuperar</string>

    // Init screen
    // Nombre primer fragmento
    <string name="bn_firstFragment">Home</string>
    // Nombre segundo fragmento
    <string name="bn_secondFragment">Estadísticas</string>
    // Nombre tercero fragmento
    <string name="bn_thirdFragment">Configuración</string>
    // Nombre cuarto fragmento
    <string name="bn_fourthFragment">Ayuda</string>

    // First fragment screen
    // CardView
    // Nombre del nodo
    <string name="cv_label_nodo">Nodo X</string>
    // Variable 1
    <string name="cv_label_var1">Variable 1</string>
    // Variable 2
    <string name="cv_label_var2">Variable 2</string>
    // Variable 3
    <string name="cv_label_var3">Variable 3</string>
    // Variable 4
    <string name="cv_label_var4">Variable 4</string>
    // Variable 5
    <string name="cv_label_var5">Variable 5</string>
    // Variable 6
    <string name="cv_label_var6">Variable 6</string>
    // Variable 7
    <string name="cv_label_var7">Variable 7</string>
    // Variable 8
    <string name="cv_label_var8">Variable 8</string>
    // Estado
    <string name="cv_label_estado">Estado</string>
    // Recycler view
    // Nombre de la descripción de las Cardviews
    <string name="rv_texto_descripcion">Selecciona un sistema para más detalles</string>

    // Fourth fragment screen
    // Texto de descipción de imagen del usuario
    <string name="f4_texto_desImageUs">Imagen de perfil del usuario </string>
    // Texto de CardView de información de usuario
    <string name="f4_texto_nomCardUsuario">Cuenta</string>
    // Texto nombre del usuario
    <string name="f4_texto_nameUs">Mechaponics System</string>
    // Texto de correo del usuario
    <string name="f4_texto_emailUs">mechaponicssystem@gmail.com</string>
    // Texto de sesión activada
    <string name="f4_texto_sesionactiva">Activo</string>
    // Texto boton cerrar sesión
    <string name="f4_texto_btn_cerrarses">Cerrar sesión</string>
    // Texto boton editar datos de usuario
    <string name="f4_texto_btn_editarUs">Editar</string>
    // Texto de CardView de información del proyecto
    <string name="f4_texto_nomCardMecha">Mechaponics System</string>
    // Texto de descripción de la CardView del poryecto
    <string name="f4_texto_desCardMecha">
        Mechaponics es un proyecto para cultivar hortalizas en la comodidad de su hogar, coloque sus
        platúlas de lechuga, encienda el sistema y disfrute de su cosecha.
    </string>
    // Texto de CardView de información de hidroponía
    <string name="f4_texto_nomCardPonics">Hidroponía</string>
    // Texto de descripción de la CardView del poryecto
    <string name="f4_texto_desCardPonics">
        Se le llama así a la agricultura sin suelo, un método para cultivar plantas utilizando
        disoluciones minerales.
    </string>
    // Texto de CardView de información de hidroponía
    <string name="f4_texto_nomCardSistema">Manual de usuario</string>
    // Texto de descripción de la CardView del poryecto
    <string name="f4_texto_desCardSistema">
        Se le llama así a la agricultura sin suelo, un método para cultivar plantas utilizando
        disoluciones minerales.
        Se le llama así a la agricultura sin suelo, un método para cultivar plantas utilizando
        disoluciones minerales.
        Se le llama así a la agricultura sin suelo, un método para cultivar plantas utilizando
        disoluciones minerales.
        Se le llama así a la agricultura sin suelo, un método para cultivar plantas utilizando
        disoluciones minerales.
        Se le llama así a la agricultura sin suelo, un método para cultivar plantas utilizando
        disoluciones minerales.
    </string>
    // Bottom Sheet del fragemento 4
    <string name="f4_texto_sf4_titulo">Usuario</string>
    // Nombre de usuario Bottom Sheet
    <string name="f4_texto_sf4_usuario">Nombre de usuario:</string>}
    // Correo de usuario Bottom Sheet
    <string name="f4_texto_sf4_email">Correo:</string>

    // Thrid fragment screen
    // Texto de descipción de imagen del usuario
    <string name="f3_texto_desImageNodos">Imagen del sistema</string>
    // Texto de CardView de información de usuario
    <string name="f3_texto_nomCardNodos">Nodos del sistema</string>
    // Texto de Nodo 1
    <string name="f3_texto_nomNodo1">Sin nodo de solución</string>
    // Texto de Nodo 2
    <string name="f3_texto_nomNodo2">Sin nodo de cultivo 1</string>
    // Texto de Nodo 3
    <string name="f3_texto_nomNodo3">Sin nodo de cultivo 2</string>
    // Texto de Nodo 4
    <string name="f3_texto_nomNodo4">Sin nodo de cultivo 3</string>
    // Texto boton agregar nodo
    <string name="f3_texto_btn_agregar">Configurar</string>
    // Texto de CardView de modos de operación sistema
    <string name="f3_texto_nomCardModos">Configuración del sistema</string>
    // Texto del switch de cambio de mod
    <string name="f3_texto_changemodo">Modo de operación automático</string>
    // Texto de valor de la SN
    <string name="f3_texto_modSN">Solución nutritiva</string>
    // Texto del botón de modificación de los parámetros del modo experto
    <string name="f3_texto_btn_modificar">Modificar</string>
    // Texto de variable 1 de la SN
    <string name="f3_texto_modExpH">pH de la solución nutritiva </string>
    // Texto de variable 2 de la SN
    <string name="f3_texto_modExCE">CE de la solución nutritiva </string>
    // Texto de valor de la SN
    <string name="f3_texto_modCC">Celda de cultivo</string>
    // Texto de variable 1 de la CC
    <string name="f3_texto_modExTemp">Temperatura de la celda de cultivo</string>
    // Texto de variable 2 de la CC
    <string name="f3_texto_modExHum">Humedad de la celda de cultivo</string>
    // Texto de variable 3 de la CC
    <string name="f3_texto_modExLum">Luminisidad de la celda de cultivo</string>
    // Texto de variable 3 de la CC
    <string name="f3_texto_modExRiego">Número de riegos al día</string>
    // Texto del sheet dialog de cambio de variables del modo de sistema
    <string name="f3_texto_chnageMod">Modo Experto</string>
    // Texto del slider SN variable 1
    <string name="f3_texto_sliderSNVar1">pH del sistema a:</string>
    // Texto del slider SN variable 2
    <string name="f3_texto_sliderSNVar2">CE del sistema a:</string>
    // Texto del slider CC variable 1
    <string name="f3_texto_sliderCCVar1">Temperatura del sistema a:</string>
    // Texto del slider CC variable 3
    <string name="f3_texto_sliderCCVar2">Humedad del sistema a:</string>
    // Texto del slider CC variable 3
    <string name="f3_texto_sliderCCVar3">Luminosidad del sistema a:</string>
    // Texto del slider CC variable 4
    <string name="f3_texto_sliderCCVar4">Riegos del sistema a:</string>
    // Texto de Cardview del modo demostrativo
    <string name="f3_texto_nomCardDemos">Prueba del sistema</string>
    // Texto para habilitar opciones de la prueba
    <string name="f3_texto_sliderDemos">Habilitar opciones de la prueba</string>
    // Texto de selección de opciones para prueba
    <string name="f3_texto_seleChips">Selecione la configuración de la prueba</string>
    // Texto de opción 1 de los chips
    <string name="f3_texto_chip1">Dosificadores</string>
    // Texto de opción 2 de los chips
    <string name="f3_texto_chip2">Solución nutritiva</string>
    // Texto de opción 3 de los chips
    <string name="f3_texto_chip3">Irrigación</string>
    // Texto de opción 4 de los chips
    <string name="f3_texto_chip4">Temperatura</string>
    // Texto de opción 5 de los chips
    <string name="f3_texto_chip5">Humedad</string>
    // Texto de opción 6 de los chips
    <string name="f3_texto_chip6">Mediciones</string>
    // Texto botón de ejecutar prueba demostrativo
    <string name="f3_texto_btn_demos">Ejecutar prueba</string>

    // Texto bottom sheet de modo demostrativo
    // Texto del titulo del bottom sheet
    <string name="f3_texto_bsDemos">Modo demostrativo</string>
    // Texto del boton del modo demostrativo bottom sheet
    <string name="f3_texto_btnDemos">Cancelar</string>

    // Bottom sheet de la configuración de los nodos
    // Texto
    <string name="f3_texto_bs_confignodos"> Nodos del sistema </string>
    // Texto del boton de agregar nodo
    <string name="f3_texto_bs_btn1">Agregar nodo</string>
    // Texto del boton de configurar nodo
    <string name="f3_texto_bs_btn2">Configurar nodo</string>
    // Texto del boton de elminar nodo
    <string name="f3_texto_bs_btn3">Eliminar nodo</string>
    // Texto del nodo 4
    <string name="om_nodo4">Nodo 4</string>

    // Pagina de configuracion del nodo wifi
    // Texto de conexión con el ESP32
    <string name="f3_texto_congifnodo">Conectese al ESP32 que va configurar</string>
    // Texto de boton de nodo conectado listo
    <string name="f3_texto_cinfignodo_ok">Activar</string>
    // Texto de boton de nodo configurado
    <string name="f3_texto_btn_nodoListo">Regresar</string>
    // Texto para agregar nodos
    <string name="f3_texto_agregarnodos">Selecciona el nodo que vas a configurar</string>
    // Texto de selección nodo 1
    <string name="f3_texto_rbtnNodo1">Nodo 1</string>
    // Texto de selección nodo 2
    <string name="f3_texto_rbtnNodo2">Nodo 2</string>
    // Texto de selección nodo 3
    <string name="f3_texto_rbtnNodo3">Nodo 3</string>
    // Texto de selección nodo 4
    <string name="f3_texto_rbtnNodo4">Nodo 4</string>

</resources>