<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Opción uno para visualización del sistema -->

    <item
        android:id="@+id/firstFragment"
        android:icon="@drawable/lg_ic_login"
        android:title="@string/bn_firstFragment" />

    <!-- Opción dos para gestión del sistema -->

    <item
        android:id="@+id/secondFragment"
        android:icon="@drawable/lg_ic_contrasena"
        android:title="@string/bn_secondFragment" />

    <!-- Opción tres para configuración del sistema -->

    <item
        android:id="@+id/thirdFragment"
        android:icon="@drawable/lg_ic_email"
        android:title="@string/bn_thirdFragment" />

    <!-- Opción cuatro para ayuda del sistema -->

    <item
        android:id="@+id/fourthFragment"
        android:icon="@drawable/lg_ic_login"
        android:title="@string/bn_fourthFragment" />
</menu>