<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetContainerDemos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/f3_texto_bsDemos"
        android:textColor="@color/first_color"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@color/first_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/tvModDOp1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/f3_texto_chip1"
            android:textColor="@color/SC_color" />

        <TextView
            android:id="@+id/tvModDOp2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/SC_color"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/f3_texto_chip2" />

        <TextView
            android:id="@+id/tvModDOp3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/SC_color"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/f3_texto_chip3" />

        <TextView
            android:id="@+id/tvModDOp4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/SC_color"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/f3_texto_chip4" />

        <TextView
            android:id="@+id/tvModDOp5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/SC_color"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/f3_texto_chip5" />

        <TextView
            android:id="@+id/tvModDOp6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/SC_color"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/f3_texto_chip6" />

        <ProgressBar
            android:id="@+id/progressBarDemos"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminateOnly="true"
            android:indeterminateTint="@color/first_color"
            app:trackCornerRadius="15dp" />

    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:background="@color/first_color" />

    <Button
        android:id="@+id/btnModDemosDesac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/f4_color_btn_lo"
        android:drawableEnd="@drawable/lo_ic_logout"
        android:drawableTint="#fff"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/f3_texto_btnDemos"
        android:textColor="#fff"
        android:textSize="12dp" />

</LinearLayout>