<?xml version="1.0" encoding="utf-8"?>

<!-- CardView para el recycler view del fragmento del sistema -->

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp">

            <!-- Imagen del CardView -->

            <ImageView
                android:id="@+id/cv_iconImageView"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                app:srcCompat="@drawable/cv_ic_sn" />

            <LinearLayout
                android:id="@+id/linearL2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/cv_iconImageView"
                android:layout_toRightOf="@+id/cv_iconImageView"
                android:orientation="vertical">

                <!-- Nombre del CardView -->

                <TextView
                    android:id="@+id/tvNodo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/cv_label_nodo"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <!-- Variable 1 del CardView -->

                <TextView
                    android:id="@+id/tvVariable1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/cv_label_var1"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <!-- Variable 2 del CardView -->

                <TextView
                    android:id="@+id/tvVariable2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/cv_label_var2"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <!-- Variable 3 del CardView -->

                <TextView
                    android:id="@+id/tvVariable3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/cv_label_var3"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <!-- Variable 4 del CardView -->

                <TextView
                    android:id="@+id/tvVariable4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/cv_label_var4"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <!-- Variable 5 del CardView -->

                <TextView
                    android:id="@+id/tvVariable5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/cv_label_var5"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <!-- Variable 6 del CardView -->

                <TextView
                    android:id="@+id/tvVariable6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/cv_label_var6"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <!-- Variable 7 del CardView -->

                <TextView
                    android:id="@+id/tvVariable7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/cv_label_var7"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <!-- Variable 8 del CardView -->

                <TextView
                    android:id="@+id/tvVariable8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/cv_label_var8"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <!-- Estado del CardView -->

            <TextView
                android:id="@+id/tvEstadoSis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="6dp"
                android:text="@string/cv_label_estado"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>